--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.6.14"
+    "@prisma/adapter-d1": "^6.1.0",
+    "@prisma/client": "6.1.0",
+    "hono": "^4.6.15",
+    "ky": "^1.7.4"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241112.0",
-    "wrangler": "^3.88.0"
+    "@cloudflare/workers-types": "^4.20241224.0",
+    "prisma": "^6.1.0",
+    "wrangler": "^3.99.0"
   }
 }
