--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,28 +1,11 @@
 name = "b2-browser"
-main = "src/index.ts"
+main = "src/index.tsx"
 compatibility_date = "2024-12-18"
 
-# compatibility_flags = [ "nodejs_compat" ]
+[assets]
+directory = "public"
 
-# [vars]
-# MY_VAR = "my-variable"
-
-# [[kv_namespaces]]
-# binding = "MY_KV_NAMESPACE"
-# id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-
-# [[r2_buckets]]
-# binding = "MY_BUCKET"
-# bucket_name = "my-bucket"
-
-# [[d1_databases]]
-# binding = "DB"
-# database_name = "my-database"
-# database_id = ""
-
-# [ai]
-# binding = "AI"
-
-# [observability]
-# enabled = true
-# head_sampling_rate = 1
+[[d1_databases]]
+binding = "DB"
+database_name = "b2-browser"
+database_id = "5fe5906e-e8fd-4980-b146-9779ac448f74"
