--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^9.1.2",
     "prisma": "^6.1.0",
     "tailwindcss": "^3.4.17",
+    "typed-htmx": "^0.3.1",
     "wrangler": "^3.99.0"
   }
 }
