--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,9 @@ name = "b2-browser"
 main = "src/index.tsx"
 compatibility_date = "2024-12-18"
 
+[observability]
+enabled = true
+
 [assets]
 directory = "public"
 
